2024-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* config/type-urw-base35-otf.mgk.in: Changes for the newer Artifex
	urw-base35-fonts, which now support OpenType fonts, and use long
	file names.  Specifically configure the location using the
	--with-urwbase35otf-font-dir configure option.  This is in
	response to Debian bug 1019717 "Display of an SVG file broken due
	to gsfonts transition",
	https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1019717.

2024-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Validate legacy Ghostscript font file in
	Ghostscript install directory before deciding to use it as the
	Ghostscript font directory.

2024-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jxl.c (ReadJXLImage): Apply image dimension resource
	limits. Addresses oss-fuzz Issue 69728:
	"graphicsmagick:coder_TIFF_any_fuzzer: Out-of-memory in
	coder_TIFF_any_fuzzer".

2024-09-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Further updates to color specification
	documentation, based on what the current code is
	doing. Unfortunately, current behavior deviates from CSS3 in some
	aspects.

	* fuzzing/oss-fuzz-build.sh: Libtiff build now requires
	autoconf-archive

2024-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Remove mention of RRRRGGGGBBBBAAAA due to an
	interpretation conflict which causes it to not be supported.  Add
	documentation for 32-bit variants.  Addresses SourceForge issue
	#747 "#RRRGGGBBBAAA and #RRRRGGGGBBBB color names conflict".

2024-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* TclMagick/: White-space clean-up and consistent indentation.

2024-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* TclMagick/unix/m4/tcl.m4: Update tcl.m4 to TEA_VERSION 3.10.
	The TEA_INSTALLER Autoconf macro oddly does not use the settings
	set by AC_CONFIG_AUX_DIR to find install-sh.  Instead it