@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020240913"
-#define public MagickPackageReleaseDate "snapshot-20240913"
+#define public MagickPackageVersionAddendum ".020240914"
+#define public MagickPackageReleaseDate "snapshot-20240914"
