@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x282502
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 28,25,2
-#define MagickChangeDate   "20240913"
-#define MagickReleaseDate  "snapshot-20240913"
+#define MagickChangeDate   "20240914"
+#define MagickReleaseDate  "snapshot-20240914"
 
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
